--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -14,7 +14,7 @@
         </div>
 
         <div>
-            <<p>published: 27.11.2017, 9:44</p>
+            <p>published: 27.11.2017, 9:44</p>
             <h2><a href="http://hajnalhorak.pythonanywhere.com/">My second post</a></h2>
             <p>Probálkozásgatás</p>
         </div>
