My Django Girls WebPage, Modified templates to display posts from database

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,13 @@
             <h1><a href="https://djangogirls.org/budapest/">Thanks, Django Girls Blog</a></h1>
         </div>
 
-        <div>
-            <p>published: 27.11.2017, 9:44</p>
-            <h2><a href="http://hajnalhorak.pythonanywhere.com/">My first post</a></h2>
-            <p>Probálkozás</p>
-        </div>
-
-        <div>
-            <p>published: 27.11.2017, 9:44</p>
-            <h2><a href="http://hajnalhorak.pythonanywhere.com/">My second post</a></h2>
-            <p>Probálkozásgatás</p>
-        </div>
+		{% for post in posts %}
+			<div>
+				<p>published: {{ post.published_date }}</p>
+				<h1><a href="">{{ post.title }}</a></h1>
+				<p>{{ post.text|linebreaksbr }}</p>
+			</div>
+		{% endfor %}
+       
     </body>
 </html>
